test/parsetest/valid/assignment.java
class A {
    public void abc(){
        return a == 4 = 45 == 4 / 453 && -(-4) % 345 != ert <= s && f || g == 546;
        a = 4;
    }
}