test/parsetest/invalid/g5_arrayFunction.java
class A {
  public void a() {
  
    /* no functions */
    return a[5](6);
    
  }
}
